fixed the text and alignment in the calculator page, recipes cards, footer and cocode base needs to be adjusted, in the last one the code needs to refactored and commented

--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,6 @@ input, select{
     border-radius: 10px;
 }
 
-.App { 
-    margin: 0 20%;
-}
-
 @media (max-width:  1200px) {
     .App { 
         margin: 0 10%;
@@ -34,7 +30,6 @@ input, select{
         margin: 0 7.5%;
     }
 }
-
 
 button {
     width: 20%;
